# Freelance_P-01_Cuisine-Menu-Recommendation-App

./: .gitignore  AIMasterclass.md  Dockerfile  README.md  app.py  check.py  check_city_rstn_len.json  chk.py  docker-compose.yaml  langgraph.json  langsmith_sudio.sh  main.py  pyproject.toml  requirements.txt  start_containers.sh  stop_containers.sh  str.txt  user_sample_queries.txt
.astro/: config.yaml
.claude/: attn_state.json
ETL/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  devl.Dockerfile  docker-compose.yaml  main.py  prod.Dockerfile  pyproject.toml  railway.json  req_frz.txt  requirements.txt  run_app.sh  test_transform_uq_ids.py
ETL/Bruno/: bruno.json  health.bru  kill.bru  load.bru  scrape.bru  seed.bru  status.bru
ETL/Docker/Images/Trixie/: Dockerfile  docker-compose.yaml
ETL/Docker/Mongodb/: password.env.example
ETL/Docker/Redisdb/: redisdb_users.acl.example
ETL/Src/Components/: __init__.py  api.py  extractor.py  loader.py  seeder.py  transformer.py
ETL/Src/Config/: __init__.py  cypher.py  database.py  dataschema.py  graph_pool.py  scrape.py
ETL/Src/Constants/: __init__.py  api.py  cypher.py  database.py
ETL/Src/Loader/: __init__.py  graph.py  loader.py
ETL/Src/Loader/Deprecated/: old_utils_init.py
ETL/Src/Scraper/: __init__.py  scraper.py
ETL/Src/Seeder/: __init__.py  extractor.py  uploader.py
ETL/Src/Utils/: __init__.py  _utils.py  exception.py  logger.py  utils.py
ETL/Src/Z_Expt/: test_filt_failed_urls.py  test_pull_from_mongodb.py  test_transform_uq_ids.py
ETL/Tests/: test_app.py
Frontend/: .env.example  Caddyfile  Dockerfile  devl.Dockerfile  docker-compose.yaml  prod.Dockerfile  pyproject.toml  railway.json  requirements.txt  run_app.sh  rxconfig.py
Frontend/FE_Chat/: FE_Chat.py
Frontend/assets/: style.css
RAG/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  devl.Dockerfile  docker-compose.yaml  prod.Dockerfile  pyproject.toml  railway.json  requirements.txt  run_app.sh
RAG/Bruno/: bruno.json  chat.bru  health.bru
RAG/Src/Components/: __init__.py  api.py  graph.py  nodes.py  router.py  runner.py  state.py  tools.py
RAG/Src/Config/: __init__.py  cypher.py  k_graph_config.py  k_graph_pool.py  models.py  prompts.py  schemas.py  tool_funcs.py  tool_models.py
RAG/Src/Constants/: __init__.py  cypher.py  k_graph_constants.py  labels.py  models.py  paths.py
RAG/Src/Constants/Cyphers/: tools_code.cyp
RAG/Src/Constants/Prompts/: system_prompts.txt
RAG/Src/Utils/: __init__.py  _utils.py  exception.py  logger.py  utils.py
docker/falkordb/: fkdb_users.acl.example
docker/mongodb/: add_user.js.example
docker/redisdb/: redis_users.acl.example
src/Config/: __init__.py
src/Constants/: __init__.py
src/Exception/: exception.py
src/Logging/: logger.py
(+72 files in other folders)
