[project]
name = "freelance-p-01-cuisine-menu-recommendation-app"
version = "0.1.0"
description = "An application where user can enter a locality in a city and a cuisine and it will recommend menu items."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-http>=5.6.1",
    "apache-airflow-providers-postgres>=6.5.1",
    "astro-run-dag>=0.2.10",
    "crawl4ai>=0.7.8",
    "ipykernel>=7.1.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]
