[project]
name = "freelance-p-01-cuisine-menu-recommendation-app"
version = "0.1.0"
description = "An application where user can enter a locality in a city and a cuisine and it will recommend menu items."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.5",
    "astro-run-dag>=0.2.10",
    "crawl4ai>=0.7.8",
    "falkordb>=1.4.0",
    "graphiti-core[falkordb]>=0.25.0",
    "ipykernel>=7.1.0",
    "lxml>=5.4.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.9.1%2Bcpu-cp313-cp313-manylinux_2_28_x86_64.whl" }
