[project]
name = "etl"
version = "0.2.0"
description = "ETL pipeline as a Microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.8.0",
    "falkordb>=1.5.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pandas>=3.0.1",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "redis>=7.2.0",
    "uvicorn>=0.41.0",
]
