[project]
name = "rag"
version = "0.2.0"
description = "RAG as a Microservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "falkordb>=1.6.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
    "uvicorn>=0.41.0",
]
